website/versioned_docs/version-1.7.0/wallet/backups.md
---
id: version-1.7.0-backups
title: Wallet Backups
original_id: backups
---

Currently, the primary to back up the Bitcoin-S wallet now is through creating a `zip`
archive of the `.bitcoin-s` data folder. This is chosen because to have a complete backup
for open DLCs you need to restore all the data given from your counter-party as well as some
generated by your own wallet. Zipping the folder is the easiest way to back up and restore
this data as it is not something that can be written down on a piece of paper.

## Backing up from the GUI

To create a backup from the GUI simply click the `File` menu, then select `Save Backup`.
This will bring up a dialog to choose the save location for where to save the file to.

![backup gui](/img/doc-imgs/backup-gui.png)

This file with be a `zip` archive of your `.bitcoin-s` data folder, it will contain all
of your wallet seeds, DLC data, oracle data, wallet history, and configuration.

## Backing up from the CLI

To create a backup from the cli simply use the `zipdatadir` cli command.

Example:

```bash
bitcoin-s-cli zipdatadir "/path/to/save/zip/drive"
```

This will create a `zip` archive at the given path that can be later used to restore from

## Restoring from a backup

To restore from a backup you simply to place the contents of the `zip` archive in your `.bitcoin-s` folder.

The default for different operating systems is:

Linux & MacOs: `~/.bitcoin-s`

Windows: `C:/Users/{Your Username}/.bitcoin-s`

After replacing the files, simply restart Bitcoin-S and will re-sync from where you
last left off.

* If neutrino syncing was previously being used, it will need to download them all again.
